platform/network-policies/default-deny-egress-apps.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: apps
spec:
  podSelector: {}
  policyTypes:
    - Egress
